--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@
 }
 
 #cover{
-  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)), src="home.jpg";
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)),
+  url('images/home.jpg');
   width: 100%;
   height: 100%;
   background-size: cover;
