--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,11 @@
   background-color: #12151a;
 }
 .collapse .navbar-nav .nav-item{
-  color: #fcfcfc;
+  color: $color;
 }
 
 body {
-  background-color: #12151a;
-}
-.intro{
-  text-align: center;
-  font-family: Helvetica;
-  font-size: 20px;
-  color: #fcfcfc;
-  margin-top: 6px;
+  background-color: #3e4247;
 }
 
 .carousel .carousel-item{
@@ -31,5 +24,5 @@ body {
 #interests{
   font-family: Helvetica;
   margin-top: 50px;
-  color: #fcfcfc;
+  color: $color;
 }
